# inventory-saas

./: .env.example  .env.test  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 8f08b96e1250_initial_tables.py
app/: config.py  main.py
app/api/: deps.py
app/api/routers/: inventory.py  products.py
app/api/schemas/: inventory.py  product.py
app/application/inventory/: commands.py  use_cases.py
app/application/product/: commands.py  use_cases.py
app/domain/: exceptions.py
app/domain/inventory/: inventory_item.py  repository.py  service.py  stock_movement.py  value_objects.py
app/domain/product/: entity.py  repository.py  value_objects.py
app/domain/shared/: value_objects.py
app/infrastructure/db/: session.py
app/infrastructure/db/models/: inventory.py  product.py
app/infrastructure/db/repositories/: inventory_repository.py  product_repository.py
app/infrastructure/repositories/: in_memory_inventory_repository.py  in_memory_product_repository.py
tests/api/: conftest.py  test_inventory.py  test_products.py
tests/domain/: test_inventory.py  test_product.py
